# pinfo

./: .editorconfig  .gitignore  .travis.yml  AUTHORS  ChangeLog  Changelog  INSTALL  INSTALL.in  INSTALL.txt  Makefile.am  Makefile.in  NEWS  README  README.md  TECHSTUFF  TODO  acconfig.h  aclocal.m4  autogen.sh  azure-pipelines.yml  config.h.in  configure  configure.ac  configure.in  pinfo.spec  pinfo.spec.in
doc/: Makefile.am  Makefile.in  pinfo.1  pinfo.1.in  pinfo.info  pinfo.texi
macros/: Makefile.am  Makefile.in  autogen.sh  ax_with_curses.m4  curses.m4  pkg.m4  readline.m4  wchar.m4
po/: ChangeLog  Makefile.in.in  Makevars  POTFILES.in  cs.gmo  cs.po  de.gmo  de.po  eu.po  ja.gmo  ja.po  ka.po  nl.po  pinfo.pot  pl.gmo  pl.po  pt_BR.po  ro.po  ru.gmo  ru.po  sv.gmo  sv.po  uk.po  vi.po
src/: Makefile.am  Makefile.in  colors.c  colors.cxx  colors.h  common_includes.h  curse_utils.cxx  curse_utils.h  datatypes.c  datatypes.cxx  datatypes.h  filehandling_functions.c  filehandling_functions.cxx  filehandling_functions.h  initializelinks.c  initializelinks.cxx  initializelinks.h  keyboard.c  keyboard.h  localestuff.h  mainfunction.c  mainfunction.cxx  mainfunction.h  manual.c  manual.cxx  manual.h  menu_and_note_utils.c  menu_and_note_utils.cxx  menu_and_note_utils.h  parse_config.c  parse_config.cxx  parse_config.h  pinfo.c  pinfo.cxx  pinforc.in  printinfo.c  printinfo.cxx  printinfo.h  rcsid.h  readlinewrapper.c  (+21 more)
tests/: long-node.info  long-node.texi
